--- a/jenny_analysis.ipynb
+++ b/jenny_analysis.ipynb
@@ -597,7 +597,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Find coordinates of station names\n",
+    "http://maps.googleapis.com/maps/api/geocode/json?address=street1+and+street2,+toronto&sensor=false"
+   ]
   }
  ],
  "metadata": {
