Toronto_Daily_Weather_2017

--- a/Toronto_Weather_ Data_Munging.ipynb
+++ b/Toronto_Weather_ Data_Munging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "[1 rows x 28 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4  2012-11-04  04:00:00  +0000  UTC"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "38437         NaN  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,12 +416,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2017-01-01    Snow\n",
+       "2017-01-02    Mist\n",
+       "2017-01-03    Rain\n",
+       "2017-01-04    Snow\n",
+       "2017-01-05    Snow\n",
+       "Name: weather_main, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the hourly dataframe to daily dataframe\n",
+    "\n",
+    "grouped_weather_main = Toronto_Weather_2017.groupby(['Date'])[\"weather_main\"].max()\n",
+    "grouped_weather_main.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg_temp</th>\n",
+       "      <th>avg_rain</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>274.440741</td>\n",
+       "      <td>0.088889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02</th>\n",
+       "      <td>273.157083</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              avg_temp  avg_rain\n",
+       "Date                            \n",
+       "2017-01-01  274.440741  0.088889\n",
+       "2017-01-02  273.157083  0.000000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cal the Average Temp Ave Rain \n",
+    "Toronto_Weather_2017 = Toronto_Weather_2017.fillna(0)\n",
+    "Daily_Avg = Toronto_Weather_2017.groupby('Date').mean()[[\"temp\",\"rain_1h\"]]\n",
+    "Daily_Avg = Daily_Avg.rename(columns={\"temp\":\"avg_temp\",\"rain_1h\":\"avg_rain\"})                                                        \n",
+    "Daily_Avg.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg_temp</th>\n",
+       "      <th>avg_rain</th>\n",
+       "      <th>weather_main</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>274.440741</td>\n",
+       "      <td>0.088889</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02</th>\n",
+       "      <td>273.157083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Mist</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              avg_temp  avg_rain weather_main\n",
+       "Date                                         \n",
+       "2017-01-01  274.440741  0.088889         Snow\n",
+       "2017-01-02  273.157083  0.000000         Mist"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine and create the daily Dataframe\n",
+    "Daily_2017_Toronto = Daily_Avg.join(grouped_weather_main)\n",
+    "Daily_2017_Toronto.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export 2017 Toronto Weather CSV\n",
-    "Toronto_Weather_2017.to_csv(\"Toronto_Weather_2017.csv\")"
+    "# Export 2017 Daily Toronto Weather CSV\n",
+    "Daily_2017_Toronto.to_csv(\"Toronto_Daily_Weather_2017.csv\")"
    ]
   },
   {
