Toronto_Daily_Weather_2017

--- a/Toronto_Weather_ Data_Munging.ipynb
+++ b/Toronto_Weather_ Data_Munging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "[1 rows x 28 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4  2012-11-04  04:00:00  +0000  UTC"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "38437         NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,22 +416,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>weather_main</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>Clear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017-01-02</td>\n",
+       "      <td>Clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>Mist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Date\n",
-       "2017-01-01    Snow\n",
-       "2017-01-02    Mist\n",
-       "2017-01-03    Rain\n",
-       "2017-01-04    Snow\n",
-       "2017-01-05    Snow\n",
-       "Name: weather_main, dtype: object"
+       "         Date weather_main\n",
+       "0  2017-01-01        Clear\n",
+       "5  2017-01-02       Clouds\n",
+       "8  2017-01-03         Mist\n",
+       "13 2017-01-04         Rain\n",
+       "19 2017-01-05         Snow"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,13 +491,14 @@
    "source": [
     "# Convert the hourly dataframe to daily dataframe\n",
     "\n",
-    "grouped_weather_main = Toronto_Weather_2017.groupby(['Date'])[\"weather_main\"].max()\n",
+    "grouped_weather_main_freq = Toronto_Weather_2017.groupby(['Date'])[\"weather_main\"].value_counts().reset_index(name='freq')\n",
+    "grouped_weather_main = grouped_weather_main_freq.sort_values(['Date', 'freq']).groupby(['Date']).tail(1)[[\"Date\", \"weather_main\"]]\n",
     "grouped_weather_main.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +553,7 @@
        "2017-01-02  273.157083  0.000000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -539,55 +592,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Date</th>\n",
        "      <th>avg_temp</th>\n",
        "      <th>avg_rain</th>\n",
        "      <th>weather_main</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2017-01-01</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>274.440741</td>\n",
        "      <td>0.088889</td>\n",
-       "      <td>Snow</td>\n",
+       "      <td>Clear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-02</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-02</td>\n",
        "      <td>273.157083</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>Clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>276.621731</td>\n",
+       "      <td>0.305769</td>\n",
        "      <td>Mist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>274.654211</td>\n",
+       "      <td>0.205263</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>265.951667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Snow</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              avg_temp  avg_rain weather_main\n",
-       "Date                                         \n",
-       "2017-01-01  274.440741  0.088889         Snow\n",
-       "2017-01-02  273.157083  0.000000         Mist"
+       "        Date    avg_temp  avg_rain weather_main\n",
+       "0 2017-01-01  274.440741  0.088889        Clear\n",
+       "1 2017-01-02  273.157083  0.000000       Clouds\n",
+       "2 2017-01-03  276.621731  0.305769         Mist\n",
+       "3 2017-01-04  274.654211  0.205263         Rain\n",
+       "4 2017-01-05  265.951667  0.000000         Snow"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Combine and create the daily Dataframe\n",
-    "Daily_2017_Toronto = Daily_Avg.join(grouped_weather_main)\n",
-    "Daily_2017_Toronto.head(2)"
+    "Daily_2017_Toronto = Daily_Avg.merge(grouped_weather_main, on=\"Date\", how='outer')\n",
+    "Daily_2017_Toronto.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
