--- a/jenny_analysis.ipynb
+++ b/jenny_analysis.ipynb
@@ -8,7 +8,15 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# Google API key\n",
+    "from config import api_key\n",
+    "\n",
+    "# Configure gmaps\n",
+    "gmaps.configure(api_key=gkey)"
    ]
   },
   {
@@ -1156,7 +1164,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find coordinates of station names\n",
+    "# Use iterrows to iterate through pandas dataframe\n",
+    "for index, row in bike_stations_df2.iterrows()\n",
+    "\n",
+    "# Get first intersection\n",
+    "address1 = row['address1']\n",
+    "\n",
+    "# Get second intersection\n",
+    "address2 = row['address2']\n",
+    "url = 'http://maps.googleapis.com/maps/api/place/nearbysearch/json'\n",
     "#http://maps.googleapis.com/maps/api/geocode/json?address=street1+and+street2,+toronto&sensor=false\n",
     "#http://maps.googleapis.com/maps/api/geocode/json?address=street1+and+street2&sensor=false&region=au"
    ]
