--- a/jenny_analysis.ipynb
+++ b/jenny_analysis.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import numpy as np # import new\n",
     "import requests\n",
     "import json\n",
     "\n",
